# amethystate

./: .gitignore  Cargo.toml  LICENSE  README.md  ci.ps1  rust-toolchain.toml
crates/adapters/amethystate-dioxus/: Cargo.toml
crates/adapters/amethystate-dioxus/src/: hooks.rs  lib.rs
crates/adapters/amethystate-dioxus/tests/: tests.rs
crates/adapters/amethystate-gpui/: Cargo.toml
crates/adapters/amethystate-gpui/src/: lib.rs
crates/adapters/amethystate-slint/: Cargo.toml
crates/adapters/amethystate-slint/src/: ir.rs  lib.rs  parser.rs
crates/adapters/amethystate-slint/ui/: test.slint
crates/adapters/amethystate-tauri/: Cargo.toml
crates/adapters/amethystate-tauri/src/: core.rs  error.rs  event.rs  lib.rs
crates/adapters/rpstate-gpui/: Cargo.toml
crates/adapters/rpstate-leptos/: Cargo.toml
crates/adapters/rpstate-leptos/src/: hooks.rs
crates/adapters/rpstate-leptos/tests/: tests.rs
crates/adapters/rpstate-tauri/: Cargo.toml
crates/adapters/rpstate-tauri/src/: lib.rs
crates/adapters/rpstate-yew/: Cargo.toml
crates/adapters/rpstate-yew/src/: hooks.rs  lib.rs
crates/amethystate-cli/: Cargo.toml  test_data.json
crates/amethystate-cli/src/: app.rs  inspector.rs  main.rs
crates/amethystate-cli/src/ui/: mod.rs  sidebar.rs  viewer.rs
crates/core/amethystate-core/: Cargo.toml
crates/core/amethystate-core/src/: backend.rs  change.rs  lib.rs  scheme.rs  state.rs  test_utils.rs
crates/core/amethystate-macros-core/: Cargo.toml
crates/core/amethystate-macros-core/src/: lib.rs
crates/main/amethystate-arena/: Cargo.toml
crates/main/amethystate-arena/src/: framework.rs  lib.rs  native.rs  pipeline.rs  primitives.rs  wasm.rs
crates/main/amethystate-arena/tests/: arena_tests.rs
crates/main/amethystate-macros-arena/: Cargo.toml
crates/main/amethystate-macros-arena/src/: lib.rs
crates/main/rpstate/: Cargo.toml
crates/main/rpstate-arena/: Cargo.toml
crates/main/rpstate-arena/src/: framework.rs  lib.rs  native.rs  pipeline.rs  primitives.rs  wasm.rs
crates/main/rpstate-arena/tests/: arena_tests.rs
crates/main/rpstate/benches/: store_bench.rs
crates/main/rpstate/src/: global.rs  lib.rs  test_utils.rs
crates/main/rpstate/tests/: codegen_lookup.rs  confy_compat.rs  migration_complex.rs  migration_with_ephemeral.rs  reactive_map_defaults.rs  root.rs
crates/rpstate/: Cargo.toml  build.rs
crates/rpstate-arena/: Cargo.toml
crates/rpstate-arena/src/: lib.rs  native.rs  pipeline.rs  pipeline_buidler.rs  primitives.rs  wasm.rs
crates/rpstate-arena/tests/: arena_tests.rs
crates/rpstate-codegen/: Cargo.toml  README.md
crates/rpstate-codegen/src/: backends.rs  lib.rs
crates/rpstate-codegen/tests/: tests.rs
crates/rpstate-codegen/tests/snapshots/: tests__rust_codegen_export.snap  tests__typescript_codegen_export.snap
crates/rpstate-core/: Cargo.toml
crates/rpstate-core/src/: backend.rs  change.rs  field_core.rs  intercept.rs  lib.rs  map_core.rs  pipeline.rs  state.rs
crates/rpstate-core/src/async_impl/: backend.rs  field.rs  map.rs  mod.rs
crates/rpstate-core/src/primitives/: field_core.rs  field_ops.rs  field_ops_async.rs  map_core.rs  map_ops.rs  map_ops_async.rs  pipeline.rs  signal.rs
crates/rpstate-dioxus/: Cargo.toml
crates/rpstate-dioxus/src/: hooks.rs  lib.rs  pipeline.rs
crates/rpstate-dioxus/tests/: tests.rs
crates/rpstate-leptos/: Cargo.toml
crates/rpstate-leptos/src/: hooks.rs  lib.rs
crates/rpstate-leptos/tests/: tests.rs
crates/rpstate-macros/: Cargo.toml
crates/rpstate-macros-arena/: Cargo.toml
crates/rpstate-macros-arena/src/: lib.rs
crates/rpstate-macros-dioxus/: Cargo.toml
crates/rpstate-macros-dioxus/src/: lib.rs
crates/rpstate-macros/examples/: test_me.rs
crates/rpstate-macros/src/: lib.rs  rpstate.rs
crates/rpstate-macros/src/rpstate/: mod.rs  model.rs
crates/rpstate-macros/tests/: compile_tests.rs  root.rs
crates/rpstate-macros/tests/expand/: basic.expanded.rs  basic.rs  composition.expanded.rs  external_linked_nested.expanded.rs  migration_codegen.expanded.rs  nested.expanded.rs  nested.rs
crates/rpstate-macros/tests/fails/: lookup_deep_error.rs  lookup_deep_error.stderr  lookup_node_not_struct.rs  lookup_node_not_struct.stderr  lookup_type_mismatch.rs  lookup_type_mismatch.stderr  lookup_write_violation.rs  lookup_write_violation.stderr  lookup_wrong_name.rs  lookup_wrong_name.stderr
crates/rpstate/benches/: store_bench.rs
crates/rpstate/src/: error.rs  lib.rs  macros.rs  signal.rs  tauri_codegen.rs
crates/rpstate/src/codec/: error.rs
crates/rpstate/src/confy/: mod.rs
crates/rpstate/src/migration/: builder.rs  context.rs  engine.rs  error.rs  fields.rs  meta.rs  migrate_from.rs  mod.rs  node.rs  registry.rs  set.rs  types.rs
crates/rpstate/src/reactive/: access.rs  change.rs  field.rs  intercept.rs  map.rs  mod.rs  node.rs  pipeline.rs  signal.rs
crates/rpstate/src/store/: access.rs  builder.rs  debouncer.rs  default.rs  error.rs  field.rs  json.rs  meta.rs  mod.rs  node.rs  (+4 more)
crates/rpstate/tests/: codegen_lookup.rs  compile_tests.rs  confy_compat.rs  migration.rs  migration_builder.rs  migration_complex.rs  migration_reactive_map.rs  migration_with_ephemeral.rs  persistent_only.rs  reactive_map_defaults.rs  root.rs  slice_subscription.rs  store_tests.rs
crates/tauri-plugin-rpstate/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-rpstate/permissions/: default.toml
crates/tauri-plugin-rpstate/src/: codegen.rs  commands.rs  lib.rs
crates/tauri-plugin-rpstate/tests/: integration_tests.rs
examples/dioxus-settings/: Cargo.toml
examples/dioxus-settings/src/: main.rs
examples/gpui-settings/: Cargo.toml
examples/gpui-settings/src/: main.rs
examples/tauri-leptos/: Cargo.toml
examples/tauri-leptos/shared/: Cargo.toml
examples/tauri-leptos/src/: app.rs  main.rs
examples/tauri-leptos/src-tauri/: .gitignore  Cargo.toml  rpstate_settings.redb  tauri.conf.json
examples/tauri-yew/: Cargo.toml
examples/tauri-yew/shared/: Cargo.toml
examples/tauri-yew/src/: app.rs  main.rs
examples/tauri-yew/src-tauri/: Cargo.toml  tauri.conf.json
(+406 files in other folders)
