[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0"
authors = ["Tam1SH <ignatternyev54@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Tam1SH/rpstate"
homepage = "https://github.com/Tam1SH/rpstate"
description = "Type-safe reactive persistence for Rust GUI apps"
keywords = ["state", "state-managment", "reactive", "persistence", "gui"]
categories = ["config", "data-structures", "gui"]
readme = "README.md"
rust-version = "1.89.0"

[workspace.dependencies]
# internal
rpstate = { path = "crates/rpstate", version = "0.5.0" }
rpstate-macros = { path = "crates/rpstate-macros", version = "0.5.0" }

# external
anyhow = "1.0.102"
arc-swap = "1.9.1"
bytes = "1.11.1"
inventory = "0.3.24"
paste = "1.0.15"
petgraph = "0.8.3"
redb = "4.1.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = "0.3.6"
thiserror = "2.0.18"
tracing = "0.1.44"

# proc-macro
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

# dev
criterion = "0.8.2"
macrotest = "1.2.1"
proptest = "1.11.0"
rand = "0.10.1"
rayon = "1.12.0"
trybuild = "1.0.116"
