[workspace]
resolver = "2"
members = [
    "crates/tauri/rpstate-codegen",
    "crates/tauri/tauri-plugin-rpstate",
    "crates/core/rpstate-core",
    "crates/core/rpstate-macros-core",
    "crates/main/rpstate",
    "crates/main/rpstate-arena",
    "crates/main/rpstate-macros",
    "crates/main/rpstate-macros-arena",
    "crates/adapters/rpstate-tauri",
    "crates/adapters/rpstate-gpui",
    "crates/adapters/rpstate-leptos",
    "crates/adapters/rpstate-dioxus",
    "crates/adapters/rpstate-yew"
]

[workspace.package]
version = "0.6.0"
authors = ["Tam1SH <ignatternyev54@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Tam1SH/rpstate"
homepage = "https://github.com/Tam1SH/rpstate"
description = "Type-safe reactive persistence for Rust GUI apps"
keywords = ["state", "state-managment", "reactive", "persistence", "gui"]
categories = ["config", "data-structures", "gui"]
readme = "README.md"
rust-version = "1.89.0"

[workspace.dependencies]
# internal
rpstate = { path = "crates/rpstate" }
rpstate-core = { path = "crates/core/rpstate-core" }
rpstate-macros = { path = "crates/main/rpstate-macros" }
rpstate-arena = { path = "crates/main/rpstate-arena" }
rpstate-tauri = { path = "crates/adapters/rpstate-tauri" }
rpstate-codegen = { path = "crates/tauri/rpstate-codegen" }
rpstate-macros-core = { path = "crates/core/rpstate-macros-core" }
rpstate-macros-arena = { path = "crates/main/rpstate-macros-arena" }

# external
anyhow = "1.0"
arc-swap = "1.9.1"
bytes = "1.11.1"
inventory = "0.3.24"
paste = "1.0.15"
petgraph = "0.8.3"
redb = "4.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = "0.3.6"
thiserror = "2.0.18"
tracing = "0.1.44"
heck = "0.5.0"
directories = "6.0.0"
tokio = "1.0"
futures = "0.3.32"
parking_lot = "0.12.5"
tempfile = { version = "3.27.0" }
uuid = "1.0"

# proc-macro
darling = "0.23.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "3.5.0"

# dev
criterion = "0.8.2"
macrotest = "1.2.1"
proptest = "1.11.0"
rand = "0.10.1"
rayon = "1.12.0"
trybuild = "1.0"
insta = "1.47.2"
