[package]
name = "amethystate-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

default-run = "amethystate-cli"

[dependencies]
amethystate = { workspace = true, features = ["toml", "json", "ron", "sqlite-bundled", "redb"] }
ratatui = "0.30.1"
crossterm = "0.29.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4.45"

[[bin]]
name = "produce"
path = "src/bin/produce.rs"
