[package]
name = "rpstate-arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rpstate.workspace = true
slotmap = "1.0"
serde.workspace = true
parking_lot = "0.12.5"