[package]
name = "rpstate-codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
dioxus = []
leptos = []

[dependencies]
rpstate-core = { workspace = true }
heck.workspace = true
inventory = { workspace = true }

[dev-dependencies]
rpstate = { workspace = true, features = ["tauri"] }