[package]
name = "rpstate-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap.workspace = true
serde.workspace = true
tracing.workspace = true
inventory.workspace = true

futures = { version = "0.3.32", optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = { version = "0.1.89", optional = true }


[features]
async = ["dep:futures", "dep:serde_json", "dep:async-trait"]