[package]
name = "rpstate-dioxus"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
dioxus = { version = "0.7" }
rpstate.workspace = true
rpstate-arena.workspace = true
rpstate-macros-dioxus.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }