[package]
name = "rpstate-dioxus"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true


[features]
default = ["tauri-backend"]
tauri-backend = ["rpstate-arena/tauri-backend", "dep:rpstate-tauri"]

[dependencies]
dioxus = { version = "0.7" }
rpstate.workspace = true
rpstate-arena.workspace = true
rpstate-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rpstate-tauri = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
rpstate-macros-arena.workspace = true