[package]
name = "rpstate-macros-dioxus"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
darling.workspace = true
rpstate-macros-core.workspace = true
proc-macro-crate.workspace = true
