[package]
name    = "rpstate-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling     = { workspace = true }
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }

[dev-dependencies]
macrotest = { workspace = true }
rpstate   = { path = "../rpstate" }
serde     = { workspace = true }
trybuild  = { workspace = true }
