[package]
name = "tauri-plugin-rpstate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
links = "tauri-plugin-rpstate"

description = "Tauri v2 plugin that exposes rpstate reactive persistent state to the frontend, with TypeScript codegen"
readme = "README.md"
keywords = ["tauri", "state", "reactive", "persistence", "gui"]
categories = ["gui", "config"]

[dependencies]
rpstate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", default-features = false }
inventory = { workspace = true }
heck.workspace = true

[dev-dependencies]
tauri = { version = "2", default-features = false, features = ["test"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
