[package]
name = "rpstate-dioxus-settings-example"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"] }
rpstate = { path = "../../crates/rpstate" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["time"] }
futures-util = "0.3.32"
