[package]
name = "rpstate-dioxus-settings-example"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"] }
rpstate-dioxus = { path = "../../crates/rpstate-dioxus" }
rpstate = { path = "../../crates/rpstate" }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.32"
