[package]
name = "amethystate-dioxus-settings-example"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
dioxus = { version = "0.7.9", features = ["desktop"] }
amethystate-dioxus = { path = "../../crates/adapters/amethystate-dioxus" }
amethystate = { path = "../../crates/main/amethystate" }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.32"
