[package]
name = "gpui-settings"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
rpstate = { path = "../../crates/rpstate" }
rpstate-gpui = { path = "../../crates/rpstate-gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }