[package]
name = "tauri-yew-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"

amethystate = { path = "../../crates/main/amethystate", features = ["tauri"] }
amethystate-yew = { path = "../../crates/adapters/amethystate-yew" }
shared = { path = "./shared" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"




[workspace]
members = [ "shared", "src-tauri" ]
