[package]
name = "amethystate-dioxus"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true


[features]
default = ["tauri-backend"]
tauri-backend = ["amethystate-arena/tauri-backend", "dep:amethystate-tauri"]

[dependencies]
dioxus = { version = "0.7" }
amethystate.workspace = true
amethystate-arena.workspace = true
amethystate-core.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
amethystate-tauri = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
amethystate-macros-arena.workspace = true
amethystate = { workspace = true, features = ["test-utils"] }