[package]
name = "amethystate-gpui"
version = "0.2.0"
description = "GPUI integration adapter for the amethystate reactive persistence library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
gpui = { version = "0.2.2" }
amethystate.workspace = true
futures.workspace = true