[package]
name = "amethystate-slint"
version = "1.16.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
amethystate = { workspace = true }
i-slint-compiler = { version = "1.16.1" }
slint = { version = "1.16.1" }

[build-dependencies]
slint-build = { version = "1.16.1" }
