[package]
name = "rpstate-gpui"
version = "0.2.0"
description = "GPUI integration adapter for the rpstate reactive persistence library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
rpstate.workspace = true
futures.workspace = true