[package]
name = "rpstate-leptos"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
default = ["tauri-backend"]
tauri-backend = ["rpstate-arena/tauri-backend", "dep:rpstate-tauri", "rpstate/tauri"]

[dependencies]
leptos = { version = "0.8" }
rpstate.workspace = true
rpstate-arena.workspace = true
serde.workspace = true
uuid = { version = "1.23.1", features = ["v4"] }
log = "0.4.32"
[target.'cfg(target_arch = "wasm32")'.dependencies]
rpstate-tauri = { workspace = true, optional = true }


[dev-dependencies]
any_spawner = { version = "0.3", features = ["tokio"] }
rpstate = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
