[package]
name = "rpstate-yew"
version = "0.23.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
rpstate = { workspace = true, features = ["async"] }
yew = "0.23.0"
wasm-bindgen-futures = "0.4.72"
serde = { workspace = true, features = ["derive"] }
futures.workspace = true