[package]
name = "amethystate-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal crate for amethystate, not intended for direct use"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap.workspace = true
serde.workspace = true
tracing.workspace = true
inventory.workspace = true

futures = { version = "0.3.32", optional = true }
serde_json = { workspace = true, optional = true }
async-trait = { version = "0.1.89", optional = true }
uuid = { workspace = true, features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = [ "v4", "js", "serde"] }

[features]
test-utils = []
async = ["dep:futures", "dep:serde_json", "dep:async-trait"]