[package]
name = "amethystate-arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
amethystate.workspace = true
amethystate-tauri = { workspace = true, optional = true }
amethystate-macros-arena.workspace = true
slotmap = "1.0"
serde.workspace = true
parking_lot = "0.12.5"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
amethystate = { workspace = true, features = ["test-utils"] }
anyhow = "1.0.102"

[features]
tauri-backend = ["dep:amethystate-tauri", "amethystate/tauri"]