[package]
name = "amethystate-macros-arena"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Agnostic arena handle macro for amethystate"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
darling.workspace = true
amethystate-macros-core.workspace = true
proc-macro-crate.workspace = true