[package]
name = "rpstate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
default = ["redb"]
json = ["text"]
toml = ["dep:toml_edit", "text"]
ron = ["dep:ron", "text"]
sqlite = ["dep:rusqlite", "dep:sonic-rs", "dep:parking_lot"]
sqlite-bundled = ["sqlite", "rusqlite/bundled"]
redb = ["dep:redb", "dep:rmp-serde", "dep:parking_lot"]
text = ["dep:tempfile", "dep:parking_lot", "dep:notify"]

async = ["rpstate-core/async"]
tauri = ["rpstate-macros/tauri", "rpstate-tauri", "async"]

confy-compat-0-6 = ["dep:directories"]
confy-compat = []
test-utils = ["rpstate-core/test-utils"]


[dependencies]
rusqlite = { version = "0.39.0", optional = true }
sonic-rs = { version = "0.5.8", optional = true }
uuid = { workspace = true, features = ["v4"] }
rpstate-core = { workspace = true }
rpstate-tauri = { workspace = true, optional = true }
petgraph = { workspace = true }
rpstate-macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
serde_json = { workspace = true }
directories = { workspace = true, optional = true }
inventory = { workspace = true }
parking_lot = { workspace = true, optional = true }
toml_edit = { version = "0.25.12", features = ["serde"], optional = true }
tempfile = { workspace = true, optional = true }
ron = { version = "0.12.1", optional = true }
notify = { version = "8", optional = true }
etcetera = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = [ "v4", "js", "serde"] }

[dev-dependencies]
insta.workspace = true
serde_json = { workspace = true }
rpstate-core = { workspace = true, features = ["test-utils"] }
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
macrotest = { workspace = true }
serde = { workspace = true }
trybuild = { workspace = true }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
real-confy = { package = "confy", version = "2.0.0" }
serial_test = "3.5.0"

[[bench]]
name = "store_bench"
harness = false
